--- a/_config.yml
+++ b/_config.yml
@@ -119,6 +119,9 @@ pwa:
 
 paginate: 10
 
+plugins:
+  - jekyll-target-blank
+  
 # ------------ The following options are not recommended to be modified ------------------
 
 kramdown:
